# TemplePlus

./: .gitignore  BuildRelease.ps1  CMakeLists.txt  CMakeSettings.json  InstallSquirrel.ps1  LICENSE  PackRelease.ps1  README.md  Report20160522-0229.diagsession  Report20160522-0301 (2).diagsession  Report20160522-0327 (2).diagsession  Report20160522-0348.diagsession  Report20160524-0110.diagsession  TempleLauncher2.pro  TemplePlus.nuspec  TemplePlus.sln  TemplePlus.vcxproj  TemplePlus.vcxproj.filters  UpdateUiMoc.ps1  UpdateVersion.ps1  aas.h  action_sequence.cpp  action_sequence.h  addresses.h  addressess.cpp  ai.cpp  ai.h  anim.cpp  anim.h  animalcompanion.cpp  appveyor.yml  attackrollcpp.cpp  azure-pipelines.yml  bonus.cpp  bonus.h  bonusspells.cpp  char_creation.cpp  combat.cpp  combat.h  common.h  (+186 more)
EASTL/: CMakeLists.txt  EASTL.vcxproj  EASTL.vcxproj.filters
Infrastructure/: CMakeLists.txt  Infrastructure.vcxproj  Infrastructure.vcxproj.filters  breakpad.cpp  crypto.cpp  d3d.cpp  dxerr.cpp  elfhash.cpp  folderutils.cpp  format.cc  images.cpp  images_tga.cpp  jpeg.cpp  json11.cpp  keyboard.cpp  logging.cpp  materials.cpp  mdfparser.cpp  meshes.cpp  meshes_animfallbacks.cpp  meshes_rewrite.cpp  mesparser.cpp  renderstates.cpp  stb_image.h  stringutil.cpp  tabparser.cpp  textures.cpp  tokenizer.cpp  version.cpp  vfs.cpp  windows.cpp
Infrastructure/breakpad/: exception_handler.cc  exception_handler.h  ipc_protocol.h  minidump_format.h
Infrastructure/include/: debugui.h  elfhash.h  exception.h  format.h  guid.h  materials.h  meshes.h  mesparser.h  stopwatch.h  stringutil.h  textures.h  vfs.h
Infrastructure/src/: allocator.cpp  guid.cpp  location.cpp  meshes.cpp
ParticleSystems/: CMakeLists.txt  ParticleSystems.vcxproj  ParticleSystems.vcxproj.filters  bones.cpp  instances.cpp  params.cpp  params_parser.cpp  parser.cpp  parser_keyframes.cpp  parser_params.cpp  particletypes.cpp  render.cpp  render_point.cpp  simulation.cpp  spec.cpp
ParticleSystems/src/: bones.cpp  instances.cpp  params.cpp  parser.cpp  parser_keyframes.cpp  parser_params.cpp  pch.h  render.cpp  render_general.cpp  render_general.h  render_model.cpp  render_point.cpp  render_quad.cpp  simulation.cpp
Temple/: CMakeLists.txt  Temple.vcxproj  Temple.vcxproj.filters
Temple/src/: aasrenderer.cpp  dll.cpp  materials.cpp  meshes.cpp  moviesystem.cpp  soundsystem.cpp  textures.cpp  vfs.cpp
TemplePlus/: CMakeLists.txt  InfinityEngine.cpp  InfinityEngine.h  TemplePlus.def  TemplePlus.vcxproj  TemplePlus.vcxproj.filters  aas.cpp  ability_fixes.cpp  action_sequence.cpp  action_sequence.h  ai.cpp  ai.h  allocator.cpp  anim.cpp  anim.h  animalcompanion.cpp  attackrollcpp.cpp  bonus.cpp  bonus.h  bonusspells.cpp  char_creation.cpp  char_creation.h  combat.cpp  combat.h  common.cpp  common.h  condition.cpp  condition.h  critter.cpp  critter.h  d20.cpp  d20.h  d20_class.cpp  d20_class.h  d20_defs.cpp  d20_defs.h  d20_level.cpp  d20_level.h  d20_levelup.cpp  d20_levelup.h  (+151 more)
TemplePlus/animgoals/: anim.cpp  anim.h  anim_slot.h  animgoal.cpp  animgoal.h  animgoals.cpp  animgoals.h  animgoals_callbacks.cpp  animgoals_callbacks.h  animgoals_debugrenderer.cpp  animgoals_debugrenderer.h  animgoals_hooks.cpp  animgoals_stackentry.cpp  animgoals_stackentry.h
TemplePlus/config/: config.cpp  config.h  config_hooks.cpp
TemplePlus/diag/: diag.cpp  diag.h  proto_cols.cpp
TemplePlus/fixes/: generalfixes.cpp  keyboard.cpp  light_load.cpp  light_load_fix.cpp  messages.cpp  partsyslag.cpp  pointbuyconfig.cpp  sector_cache_size.cpp
TemplePlus/fonts/: fonts.h  fonts_hooks.cpp  fonts_layout.cpp  fonts_mapping.cpp  fonts_mapping.h  fonts_render.cpp
TemplePlus/gamesystems/: aas_hooks.cpp  aas_hooks.h  autoplayer.cpp  autoplayer.h  fogrenderer.cpp  fogrenderer.h  froggrapplecontroller.cpp  froggrapplecontroller.h  gamelib_load.cpp  gamelib_save.cpp  gamemodule.cpp  gamemodule.h  gamerenderer.cpp  gamerenderer.h  gamesystem.h  gamesystems.cpp  gamesystems.h  legacy.cpp  legacy.h  legacymapsystems.cpp  legacymapsystems.h  legacysystems.cpp  legacysystems.h  lightningrenderer.cpp  lightningrenderer.h  loadingscreen.h  mapobjrender.cpp  mapobjrender.h  mappreprocessor.cpp  mappreprocessor.h  mapsystem.cpp  mapsystem.h  mapsystem_hooks.cpp  mapsystems.cpp  mapsystems.h  objfade.cpp  objfade.h  particlesystems.cpp  particlesystems.h  particlesystems_hooks.cpp  (+16 more)
TemplePlus/graphics/: aas_hooks.cpp  graphics.cpp  graphics.h  imgfile.cpp  imgfile.h  legacyvideosystem.h  loadingscreen.cpp  loadingscreen.h  mapterrain.cpp  mapterrain.h  materials.cpp  materials.h  materials_hooks.cpp  materials_hooks.h  mdfrenderer.cpp  mdfrenderer.h  rectangle.cpp  rectangle.h  render_hooks.cpp  render_hooks.h  renderer.cpp  renderer.h  renderstates.cpp  renderstates.h  renderstates_data.h  renderstates_hooks.cpp  renderstates_hooks.h  shaders.cpp  shaders.h  textures.cpp  textures.h  textures_hooks.cpp  video_hooks.cpp  video_hooks.h
TemplePlus/messages/: messagequeue.cpp  messagequeue.h
TemplePlus/python/: pybind_common.h  python.cpp  python22_d.lib  python_areas.cpp  python_areas.h  python_bonus.cpp  python_bonus.h  python_cheats.cpp  python_cheats.h  python_console.cpp  python_console.h  python_consoleout.cpp  python_counters.cpp  python_damage.cpp  python_damage.h  python_debug.cpp  python_debug.h  python_dialog.cpp  python_dice.cpp  python_dice.h  python_dispatcher.cpp  python_dispatcher.h  python_embed.cpp  python_embed.h  python_game.cpp  python_globalflags.cpp  python_globalflags.h  python_globalvars.cpp  python_gui.cpp  python_header.h  python_importer.cpp  python_importer.h  python_integration.cpp  python_integration.h  python_integration_brawl.cpp  python_integration_class_spec.cpp  python_integration_class_spec.h  python_integration_d20_action.cpp  python_integration_d20_action.h  python_integration_encounter.cpp  (+29 more)
TemplePlus/qml/: imagehandler.cpp  imagehandler.h  imageplugin.cpp  imageplugin.h  imageplugin_moc.cpp  (+19 more)
TemplePlusLauncher/: CMakeLists.txt  TemplePlusLauncher.vcxproj  TemplePlusLauncher.vcxproj.filters  main.cpp  resource.h
(+3225 files in other folders)
